--- a/php/5.6/fpm/Dockerfile
+++ b/php/5.6/fpm/Dockerfile
@@ -91,4 +91,18 @@ RUN apt-get install -y rsync vim wget \
 && rm -r /var/lib/apt/lists/* \
 && rm -rf /tmp/*
 
+RUN rm -rf /etc/localtime \
+    && ln -s /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
+&& echo "alias ls='ls -lhG --color=auto'" >> /root/.bashrc \
+&& echo "alias ll='ls -lhG --color=auto'" >> /root/.bashrc \
+&& . /root/.bashrc \
+&& echo "post_max_size = 50M" >> /usr/local/etc/php/conf.d/php.ini \
+&& echo "upload_max_filesize = 50M" >> /usr/local/etc/php/conf.d/php.ini \
+&& echo "date.timezone = PRC" >> /usr/local/etc/php/conf.d/php.ini \
+&& echo "short_open_tag = On" >> /usr/local/etc/php/conf.d/php.ini \
+&& echo "cgi.fix_pathinfo=0" >> /usr/local/etc/php/conf.d/php.ini \
+&& echo "max_execution_time = 300" >> /usr/local/etc/php/conf.d/php.ini \
+&& echo ";register_long_arrays = On" >> /usr/local/etc/php/conf.d/php.ini \
+&& echo ";magic_quotes_gpc = On" >> /usr/local/etc/php/conf.d/php.ini
+
 COPY msmtprc /etc/
