--- a/php/7.1/fpm/Dockerfile
+++ b/php/7.1/fpm/Dockerfile
@@ -65,7 +65,7 @@ RUN buildDeps=" \
 #       done \
 
 # Install additional packages
-RUN apt-get update && apt-get install -y git msmtp-mta openssh-client --no-install-recommends && rm -r /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y git msmtp-mta openssh-client --no-install-recommends && rm -rf /var/lib/apt/lists/*
 
 # Install composer and put binary into $PATH
 RUN curl -sS https://getcomposer.org/installer | php \
