--- a/php/7.1/fpm/Dockerfile
+++ b/php/7.1/fpm/Dockerfile
@@ -98,3 +98,19 @@ RUN apt-get install -y rsync
 RUN rm -r /var/lib/apt/lists/*
 
 COPY msmtprc /etc/
+
+RUN rm -rf /etc/localtime \
+&& ln -s /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
+&& echo "alias ls='ls -lhG --color=auto'" >> /root/.bashrc \
+&& echo "alias ll='ls -lhG --color=auto'" >> /root/.bashrc \
+&& . /root/.bashrc \
+&& echo "post_max_size = 50M" >> /usr/local/etc/php/conf.d/php.ini \
+&& echo "upload_max_filesize = 50M" >> /usr/local/etc/php/conf.d/php.ini \
+&& echo "date.timezone = PRC" >> /usr/local/etc/php/conf.d/php.ini \
+&& echo "short_open_tag = On" >> /usr/local/etc/php/conf.d/php.ini \
+&& echo "cgi.fix_pathinfo=0" >> /usr/local/etc/php/conf.d/php.ini \
+&& echo "max_execution_time = 300" >> /usr/local/etc/php/conf.d/php.ini
+
+RUN apt-get update && apt-get install -y vim
+#RUN rm -rf /var/lib/apt/lists/* \  wget procps
+#&& rm -rf /tmp/*
