--- a/php/7.0/fpm/Dockerfile
+++ b/php/7.0/fpm/Dockerfile
@@ -51,8 +51,12 @@ RUN buildDeps=" \
     && docker-php-ext-install $phpModules \
     && printf "\n" | pecl install amqp \
     && pecl install igbinary \
+#    && printf "\n" | pecl install memcache \
     && pecl install mongodb \
     && pecl install redis \
+    && for ext in $phpModules; do \
+           rm -f /usr/local/etc/php/conf.d/docker-php-ext-$ext.ini; \
+       done \
     && docker-php-source delete \
     && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false $buildDeps
 
@@ -84,26 +88,16 @@ RUN curl -OL https://squizlabs.github.io/PHP_CodeSniffer/phpcs.phar \
 RUN curl -sL https://deb.nodesource.com/setup_6.x | bash - \
     && apt-get install -y nodejs build-essential
 
-RUN rm -rf /etc/localtime \
-&& ln -s /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
-&& echo "alias ls='ls -lhG --color=auto'" >> /root/.bashrc \
-&& echo "alias ll='ls -lhG --color=auto'" >> /root/.bashrc \
-&& . /root/.bashrc \
-&& echo "post_max_size = 50M" >> /usr/local/etc/php/conf.d/php.ini \
-&& echo "upload_max_filesize = 50M" >> /usr/local/etc/php/conf.d/php.ini \
-&& echo "date.timezone = PRC" >> /usr/local/etc/php/conf.d/php.ini \
-&& echo "short_open_tag = On" >> /usr/local/etc/php/conf.d/php.ini \
-&& echo "cgi.fix_pathinfo=0" >> /usr/local/etc/php/conf.d/php.ini \
-&& echo "max_execution_time = 300" >> /usr/local/etc/php/conf.d/php.ini
-
 # Install Yarn
 RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
     && echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list \
     && apt-get update && apt-get install yarn
 
-RUN apt-get update && apt-get install -y rsync  vim wget
+RUN apt-get install -y rsync
 
-RUN rm -r /var/lib/apt/lists/* \
-&& rm -rf /tmp/*
+RUN rm -r /var/lib/apt/lists/*
 
 COPY msmtprc /etc/
+
+COPY start.sh /root/start.sh
+RUN ln -s /root/start.sh /start.sh && chmod +x /root/start.sh
